--- a/index.html
+++ b/index.html
@@ -11,36 +11,44 @@
 
 <body>
     <section>
-        <form action="">
+        <h1>ROCK PAPER SCISSORS</h1>
+        <form action="" onsubmit="return false">
             <article>
                 <p>how far will you go?</p>
                 <div class="input_rounds">
-                    <input type="radio" name="" id="rounds5">5
-                    <input type="radio" name="" id="rounds10">10
-                    <input type="radio" name="" id="rounds15">15
-                    <input type="radio" name="" id="rounds20">20
+                    <input type="radio" name="rounds" id="inputRounds5" onclick="selectRounds()">5
+                    <input type="radio" name="rounds" id="inputRounds10" onclick="selectRounds()">10
+                    <input type="radio" name="rounds" id="inputRounds15" onclick="selectRounds()">15
+                    <input type="radio" name="rounds" id="inputRounds20" onclick="selectRounds()">20
                 </div>
                 <div class="show_rounds">
+                    <p>Rounds</p>
                     <p>
-                        <span id="roundsCurrent"></span>
-                        <span id="roundsTotal"></span>
+                        <span id="outputRoundsCurrent"></span>
+                        <span> / </span>
+                        <span id="outputRoundsTotal"></span>
                     </p>
                 </div>
             </article>
             <article>
+                <p>Points</p>
                 <p>
-                    <span id="pointsUser"></span>
-                    <span id="pointsComp"></span>
+                    <span id="outputScoreUser"></span>
+                    <span> : </span>
+                    <span id="outputScoreComputer"></span>
                 </p>
             </article>
-            <p id="outputInfo"></p>
+            <p id="outputResult"></p>
             <article>
-                <button id="rock" onclick="startGame()"><img src="" alt="rock"></button>
-                <button id="paper" onclick="startGame()"><img src="" alt="paper"></button>
-                <button id="scissors" onclick="startGame()"><img src="" alt="scissors"></button>
+                <button id="inputChoiceRock" onclick="chooseRock()"><img src="assets/img/icons8-rock-48.png"
+                        alt="rock"></button>
+                <button id="inputChoicePaper" onclick="choosePaper()"><img src="assets/img/icons8-paper-64.png"
+                        alt="paper"></button>
+                <button id="inputChoiceScissors" onclick="chooseScissors()"><img src="assets/img/icons8-scissors-64.png"
+                        alt="scissors"></button>
             </article>
-            <p>MAKE YOUR MOVE.</p>
-            <button onclick="restartGame()">restart</button>
+            <p id="outputInstruction"></p>
+            <button onclick="window.location.reload();">restart</button>
         </form>
     </section>
     <script src="assets/js/main.js"></script>
