strict mode / switch optimized / hide buttons / code cleaned

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </article>
             <p id="outputResult"></p>
-            <article class="icons">
+            <article id="inputButtons" class="icons">
                 <button id="inputChoiceRock" onclick="chooseRock()"><img src="assets/img/icons8-rock-48.png"
                         alt="rock"></button>
                 <button id="inputChoicePaper" onclick="choosePaper()"><img src="assets/img/icons8-paper-64.png"
